--- a/routes.js.example
+++ b/routes.js.example
@@ -35,7 +35,10 @@ router.post('/pay', function (req, res) {
     
     gateway.transaction.sale({
         amount: req.body.price,
-        paymentMethodNonce: nonce
+        paymentMethodNonce: nonce,
+        options: {
+            submitForSettlement: true
+        }
     }, function (err, result) {
         if (result.success) {
             console.log(result);
